# janusminer

./: Dockerfile_Ubuntu18  Dockerfile_Ubuntu20  Dockerfile_Ubuntu22  README.md  meson.build  meson_options.txt
.github/workflows/: docker_build_and_release.yml
Dockerfiles/: Dockerfile_Ubuntu18  Dockerfile_Ubuntu20  Dockerfile_Ubuntu22  Dockerfile_Windows
integrations/hiveos/: build.sh  createmanifest.sh  h-config.sh  h-run.sh  h-stats.sh
integrations/mmpos/: build_mmpos.sh  createconf.sh  mmp-stats.sh
src/miner/: api_call.cpp  api_call.hpp  c_constant.hpp  cyclic_queue.hpp  device_pool.cpp  device_pool.hpp  hashrate.hpp  helpers.hpp  job.hpp  logs.cpp  logs.hpp  main.cpp  main2.cpp  meson.build  mine_job.cpp  mine_job.hpp  sha256t_results.hpp  synctools.hpp  verus_pool.cpp  verus_pool.hpp
src/miner/cmdline/: cmdline.c  cmdline.h  cmdoptions.ggo
src/miner/cpu/: efficiency_estimator.hpp  verus_job.cpp  verus_job.hpp  verus_worker.cpp  verus_worker.hpp
src/miner/gpu/: .gitignore  cl_function.hxx  cl_helper.hpp  kernel.cl  mined_values.hpp  opencl_hasher.cpp  opencl_hasher.hpp  start_gpu_miner.cpp  worker.cpp  worker.hpp  worker_old.cpp  worker_old.hpp
src/miner/gpu/sgminer/: kernel2.cl
src/miner/log/: trace.cpp  trace.hpp
src/miner/stratum/: connection.cpp  connection.hpp  connection_data.hpp  connection_server.cpp  connection_server.hpp  job.cpp  job.hpp  messages.cpp  messages.hpp
src/miner/verusopt/: sha2.cpp  verus_clhash_opt.cpp  verus_clhash_opt.hpp
src/shared/: meson.build
src/shared/src/block/body/: container.cpp  container.hpp  view.cpp  view.hpp
src/shared/src/block/chain/: worksum.cpp  worksum.hpp
src/shared/src/block/header/: difficulty.hpp  difficulty_declaration.hpp  generator.cpp  generator.hpp  header.hpp  header_impl.hpp  view.hpp  view_inline.hpp
src/shared/src/crypto/verushash/: verus_clhash_port.cpp  verus_clhash_port.hpp  verushash.cpp  verushash.hpp
src/shared/src/general/: errors.cpp  params.hpp
