project( 'Warthog Miner (Janushash)', ['c','cpp'],
  version : '0.2.0',
  default_options : ['warning_level=3', 'cpp_std=c++20'])


# asio_dep = subproject('asio', default_options : ['warning_level=0', 'werror=false']).get_variable('asio_dep')

subdir('./thirdparty')
subdir('./src/shared')
subdir('./src/miner')
# subdir('./src/stratum-miner')
